modrinth: ensure beta dependencies don't mask explicit project request (#817)